# online-cinema-api

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  alembic.ini  celeryconfig.py  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
app/: main.py  tasks.py
app/config/: dependencies.py  settings.py
app/database/: init_db.py  session.py
app/database/migrations/: env.py
app/database/migrations/versions/: 2f5d5e03ffbd_add_relationships_to_order_models.py  4caede492caa_initial_migration.py  e552bf48be99_change_rating_to_integer.py
app/database/models/: accounts.py  auth.py  base.py  movie_interactions.py  movies.py  orders.py  payments.py  shopping_carts.py
app/exceptions/: email.py  movies.py  security.py  storage.py
app/notifications/: emails.py  interfaces.py
app/notifications/templates/: activation_complete.html  activation_request.html  password_reset_complete.html  password_reset_request.html  payment_success.html
app/routes/: accounts.py  movie_metadata.py  movies.py  orders.py  payments.py  profiles.py  shopping_cart.py  shopping_carts.py
app/schemas/: accounts.py  movie_interactions.py  movies.py  orders.py  payments.py  profiles.py  shopping_carts.py
app/schemas/examples/: orders.py
app/security/: http.py  interfaces.py  passwords.py  token_manager.py  utils.py
app/storages/: interfaces.py  s3.py
app/tests/: conftest.py
app/tests/doubles/stubs/: emails.py
app/tests/test_e2e/: test_accounts.py  test_movies.py  test_orders.py
app/tests/test_integration/: test_orders.py
app/validators/: accounts.py  profiles.py
commands/: run_migration.sh  run_web_server_dev.sh
